--- a/CSS/style.css
+++ b/CSS/style.css
@@ -15,12 +15,16 @@
     --cor7: #ffa8d9;
 }
 
+body {
+    background-image: linear-gradient(321deg, rgba(250,143,177,1) 2%, rgba(247,71,128,1) 23%, rgba(0,0,0,1) 64%);
+}
+
 header{
     display: flex;
     justify-content: center;
     height: 120px;
     position: fixed;
-    background-color: #f2f2f2;
+    background-image: linear-gradient(321deg, rgba(250,143,177,1) 0%, rgba(247,71,128,1) 15%, rgba(0,0,0,1) 64%);;
     width: 100%;
     z-index: 999;
 }
@@ -37,8 +41,8 @@ header{
 }
 
 .logo-image img {
-    width: 200px;
-    height: 100px;
+    width: 240px;
+    height: 120px;
 }
 
 .menu {
@@ -62,7 +66,7 @@ nav a {
     padding: 15px;
     text-decoration: none;
     text-transform: uppercase;
-    color: var(--cor5);
+    color: #f2f2f2;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -89,7 +93,6 @@ nav a:hover {
 .wrapper {
     display: flex;
     align-items: center;
-    height: auto;
 }
 
 .slide-wrapper {
@@ -116,12 +119,15 @@ nav a:hover {
     border: 1px solid #fff;
     box-shadow: #070707 0px 12px 12px;
     position: relative;
+    object-fit: cover;
+    height: 600px;
 }
 
 .slide-image {
+    object-fit: cover;
     border-radius: 10px;
     width: 100%;
-    height: 670px;
+    
 }
 
 .slide-description {
@@ -437,6 +443,7 @@ nav a:hover {
 .agendamento h1 {
     font-size: 25px;
     text-transform: uppercase;
+    color: #f2f2f2;
 }
 
 .agendamento h2 {
@@ -491,7 +498,7 @@ footer {
     display: flex;
     justify-content: center;
     flex: 1;
-    background-color: var(--cor6);
+    background-color: transparent;
 }
 
 .footer_menu .area1 {
@@ -571,7 +578,7 @@ footer {
     border-top: 1px solid #2c2c2c;
     height: 40px;
     line-height: 40px;
-    background-color: var(--cor6);
+    background-color: transparent;
 }
 
 .copy span {
