--- a/depilação/CSS/depilcss2.css
+++ b/depilação/CSS/depilcss2.css
@@ -15,10 +15,18 @@
     --cor7: #ffa8d9;
 }
 
+body {
+    background-image: linear-gradient(321deg, rgba(242,242,242,1) 18%, rgba(250,143,177,1) 56%, rgba(247,71,128,1) 100%);
+}
+
 header {
     display: flex;
     justify-content: center;
     height: 120px;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background: linear-gradient(135deg, rgba(250,143,177,1) 0%, rgba(249,108,154,1) 15%, rgba(236,161,185,1) 100%);
 }
 
 .container {
@@ -77,10 +85,15 @@ nav a:hover {
 }
 /*fim navbar*/
 
+/*.container .column {
+    margin-top: 130px;
+}*/
+
 /*section 1*/
 #banner {
     display: flex;
     justify-content: center;
+    margin-top: 130px;
 }
 
 .container .top_banner {
