--- a/CSS/style.css
+++ b/CSS/style.css
@@ -66,7 +66,7 @@ nav a {
     padding: 15px;
     text-decoration: none;
     text-transform: uppercase;
-    color: #f2f2f2;
+    color: #727272;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -623,7 +623,7 @@ footer {
 
 .mm_line {
     height: 3px;
-    background-color: var(--cor4);
+    background-color: #000;
 }
 
 /*FIM menu mobile*/
