--- a/depilação/CSS/depilcss2.css
+++ b/depilação/CSS/depilcss2.css
@@ -55,7 +55,6 @@ header {
 .menu {
     display: flex;
     align-items: center;
-    justify-content: center;
 }
 
 nav ul,
@@ -70,11 +69,12 @@ nav ul {
 }
 
 nav a {
-    display: block; /*conseiga alterar cnteudo*/
+    display: block; /*permissao para alterar tamanho, margin etc...*/
     padding: 15px;
     text-decoration: none;
     text-transform: uppercase;
-    color: var(--cor5);
+    color: #727272;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 nav .active a,
@@ -344,7 +344,7 @@ footer {
 
 .mm_line {
     height: 3px;
-    background-color: var(--cor4);
+    background-color: #000;
     margin-bottom: 10px;
 }
 /*FIM menu mobile*/
