--- a/manicure/css/manistyle.css
+++ b/manicure/css/manistyle.css
@@ -15,10 +15,18 @@
     --cor7: #ffa8d9;
 }
 
+body {
+    background-image: linear-gradient(321deg, rgba(242,242,242,1) 18%, rgba(250,143,177,1) 56%, rgba(247,71,128,1) 100%);
+}
+
 header {
     display: flex;
     justify-content: center;
     height: 120px;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background: linear-gradient(135deg, rgba(250,143,177,1) 0%, rgba(249,108,154,1) 15%, rgba(236,161,185,1) 100%);
 }
 
 .container {
@@ -331,7 +339,7 @@ footer {
 
 .mm_line {
     height: 3px;
-    background-color: var(--cor4);
+    background-color: #000;
     margin-bottom: 10px;
 }
 /*FIM menu mobile*/
